# monocular-depth-estimation

./: .env.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  template.py
app/: __init__.py  gradio_app.py
app/components/: ui_components.py
notebooks/: exploration.ipynb
scripts/: batch_depth.py
src/depth_estimation/: __init__.py
src/depth_estimation/config/: __init__.py  settings.py
src/depth_estimation/model/: __init__.py  base_estimator.py  depth_anything_estimator.py  midas_estimator.py
src/depth_estimation/pipeline/: __init__.py  postprocessor.py  preprocessor.py
src/depth_estimation/utils/: __init__.py  device.py  logger.py
